# A2A-Kit

./: .gitignore  README.md  pyproject.toml
a2akit/: __init__.py  card.py  client.py  conformance.py  registry.py  server.py  task.py
docs/: architecture.md
tests/: test_a2a.py
