[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "a2akit"
version = "0.1.0"
description = "Production-ready SDK for Google's Agent-to-Agent (A2A) protocol"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Naveen Kumar Baskaran", email = "naveen.baskaran@sap.com"},
]
keywords = ["a2a", "agent", "protocol", "multi-agent", "interoperability", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "pytest-cov>=4.0"]
http = ["aiohttp>=3.9"]

[project.urls]
Homepage = "https://github.com/naveenkumarbaskaran/A2A-Kit"
Documentation = "https://github.com/naveenkumarbaskaran/A2A-Kit/blob/main/docs/architecture.md"
Repository = "https://github.com/naveenkumarbaskaran/A2A-Kit"
Issues = "https://github.com/naveenkumarbaskaran/A2A-Kit/issues"
